feat: Update de nome de usuario
